Added deployment folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 HELP.md
 target/
+logs/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
@@ -25,7 +26,7 @@ target/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
+deployment/
 
 ### VS Code ###
 .vscode/
